[package]
name = "conf-tickets"
version = "0.1.0"
edition = "2024"


[lib]
# cdylib builds a %.wasm file with `cargo build --release --target wasm32-unknown-unknown`
crate-type = ["cdylib"]
path = "src/lib.rs"


[features]
type-bearer = []
type-update-data = []
token-bearer = []
token-update-data = []


[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
debug = "none"
strip = "symbols"


[target.wasm32-unknown-unknown]
rustflags = [
  "-C", "link-args=--import-memory -zstack-size=8096 --initial-memory=65536 --max-memory=1310720 --gc-sections",
]


[dependencies.alphabill]
path = "../.."
default-features = false
features = [ "panic-handler", "nft-mint-token", "nft-update", "nft-token-data" ]
