[package]
name = "time-lock"
version = "0.1.0"
edition = "2024"


[lib]
# cdylib builds a %.wasm file with `cargo build --release --target wasm32-unknown-unknown`
crate-type = ["cdylib"]
path = "src/lib.rs"


[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
debug = "none"
strip = "symbols"


[dependencies.alphabill]
path = "../.."
default-features = false
features = [ "panic-handler" ]
